<resources>
    <string name="app_name">Animotion Apps</string>
    <string name="title_anime">Judul Anime</string>
    <string name="description">Deskripsi Anime:</string>
    <string name="about">About</string>
    <string name="username">Pieter Tanoto</string>
    <string name="email">pietertanoto98@gmail.com</string>
    <string name="textview">Penjelasan Anime</string>
    <string name="share">Share</string>
    <string name="animotion_apps">Animotion Apps</string>
    <string name="splash_screen_logo">Splash Screen Logo</string>
    <string name="main_item_row">Main Item Row</string>
    <string name="background_preview">Background Preview</string>
    <string name="image_poster">Image Poster</string>
    <string name="profile">Profile</string>
    <string name="rating_anime">Rating Anime</string>
    <string name="jumlah_episode">Jumlah Episode</string>
    <string name="rating_description">Rating Angka</string>
    <string name="jumlah_episode_description">Jumlah Episode</string>
    <string-array name="data_name">
        <item>Dr.Stone Season 3 Part 2</item>
        <item>Hametsu no Oukoku</item>
        <item>Jujutsu Kaisen Season 2</item>
        <item>Kimetsu No Yaiba Season 3</item>
        <item>Nanatsu no Taizai: Mokushiroku</item>
        <item>One Piece</item>
        <item>Ragna Crimson</item>
        <item>Shangri La Frontier</item>
        <item>Shingeki no Kyojin: The Final Season</item>
        <item>Spy x Family Season 2</item>
        <item>Tate no Yuusha no Nariagari Season 3</item>
        <item>Tokyo Revengers Season 3</item>
    </string-array>
</resources>